# Readform

./: .gitignore  Dockerfile  README.md  README_ZH.md  agent.go  agent_caixin.go  agent_ft.go  agent_interface.go  agent_the_initium.go  agent_the_initium_test.go  alembic.ini  browser_automation.go  build.sh  conf.go  conf.py  conf_meta.py  conf_test.go  datatypes.py  driver.py  go.mod  go.sum  helper.go  logging.go  main.go  main.py  otp.go  persistence.go  persistence.py  persistence_test.go  pyproject.toml  readwise.go  readwise.py  readwise_test.go  rss.go  tool_logging.py  tool_rss.py  tool_selenium.py  web.go  web.py  website_base.py  (+3 more)
alembic/: env.py
alembic/versions/: 1fb59554f76e_first_commit.py  76afaed937d9_add_content_column.py  9e74866c38ad_add_publish_time.py  ce93e6f2d510_add_create_time_modify_time_column.py
template/: index.html
templates/: index.html
