[tool.poetry]
name = "readform"
version = "0.1.0"
description = ""
authors = ["Frederic Chan <frederic.t.chan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
selenium = "^4.7.2"
feedparser = "^6.0.10"
sqlalchemy = "^1.4.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
